--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face {
   font-family: "IntegralCF-Bold";
   src: local("IntegralCF-Bold"),
@@ -9,7 +13,7 @@
 :root {
   --font-base : 'DM Sans', sans-serif ;
   --font-base2 : 'IntegralCF-Bold';
-  --color-purple : #3D00B7 ;
+  --color-purple : #ff6100 ;
   --color-brown  : #565656 ;
 }
 * {
