--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .section__padding {
   padding: 2rem 4rem;
 }
@@ -63,6 +59,23 @@
   background: var(--color-purple);
   border: none;
   padding: 15px 30px;
+}
+
+.button_3 {
+  font-family: var(--font-base);
+  color: var(--color-purple);
+  background: none;
+  border: 2px solid var(--color-purple);
+  outline: none;
+  cursor: pointer;
+  border-radius: 10px;
+  margin: 40px auto 0 auto;
+  transition: all ease 0.5s;
+}
+.button_3:hover {
+  color: #fff;
+  background: var(--color-purple);
+  border: none;
 }
 
 @media screen and (max-width: 450px) {
