--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 4.5px;
+  color: #ff6100;
+  transition: all .4s ease;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ff6100;
+  border-radius: 4px;
+  width: 4.5px;
+  transition: all .4s ease;
+}
+
+::-webkit-scrollbar-track {
+  background: #000000;
+  border-radius: 4px;
+  width: 4px;
+}
+
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@font-face {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* @font-face {
   font-family: "IntegralCF-Bold";
   src: local("IntegralCF-Bold"),
   url("./fonts/integral/IntegralCF-Bold.otf") format("opentype");
   font-weight: bold;
   }
-  
+   */
+
+
 :root {
   --font-base : 'DM Sans', sans-serif ;
-  --font-base2 : 'IntegralCF-Bold';
+  --font-base2 : 'Poppins', sans-serif;
+  --font-weight-bold: 700;
   --color-purple : #ff6100 ;
   --color-brown  : #565656 ;
 }
