--- a/src/container/About/About.css
+++ b/src/container/About/About.css
@@ -11,6 +11,7 @@
 }
 .app__about-content-1 h1 {
     font-family: var(--font-base2);
+    font-weight: var(--font-weight-bold);
     font-size: 28px;
 }
 .app__about-content-1 {
