--- a/src/container/Home/Home.css
+++ b/src/container/Home/Home.css
@@ -9,6 +9,7 @@
 }
 .app__home h1 {
     font-family: var(--font-base2);
+    font-weight: var(--font-weight-bold);
     font-size: 40px;
     margin-bottom: 1rem;
 }
