--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,11 @@
     justify-content: center;
     margin-top: 2rem;
 }
+.logo{
+    height: 100px;
+    width: 250px;
+    margin-bottom: -15px;
+}
 .app__footer-content {
     display: flex;
     flex-direction: row;
