--- a/src/App.css
+++ b/src/App.css
@@ -85,5 +85,17 @@
   .section__padding {
     padding: 4rem 2rem;
   }
+  .branding{
+    font-size: 1rem;
+    padding: 0 40px;
+    max-width: 100%;
+    h1{
+      font-size: 2.4rem;
+    }
+    p{
+      font-size: 1rem;
+      text-align: center;
+    }
+  }
 }
 
