--- a/src/container/About/About.css
+++ b/src/container/About/About.css
@@ -16,7 +16,7 @@
 }
 .app__about-content-1 {
     width: 100%;
-    margin: 0 .5rem 0 0;
+    align-items: center;
 }
 .app__about-content-2 {
     width: 100%;
