--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
 
 
 :root {
-  --font-base : 'DM Sans', sans-serif ;
+  --font-base : 'Poppins', sans-serif ;
   --font-base2 : 'Poppins', sans-serif;
   --font-weight-bold: 700;
   --color-purple : #ff6100 ;
