--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,13 +6,13 @@
     justify-content: space-between;
     padding: 16px 4rem;
     background: #00000044;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
     color: white;
     z-index: 9999;
 }
 .app__navbar-logo{
     height: 60px;
-    width: 180px;
+    width: 160px;
     margin-bottom: -8px;
 }
 .app__navbar-logo_small{
@@ -114,6 +114,10 @@
     }
     .app__navbar-smallscreen {
         display: flex;
+    }
+    .app__navbar-logo{
+            height: 80px;
+            margin-bottom: -12px;
     }
 }
 @media screen and (max-width: 450px) {
