--- a/src/container/About/About.css
+++ b/src/container/About/About.css
@@ -1,10 +1,13 @@
+.about-bg{
+    background: rgba(217, 224, 236, 0.3);
+}
+
 .app__about {
     display: flex;
     flex-direction: row;
     flex: 1;
     justify-content: space-between;
     align-items: flex-start;
-    background: rgba(217, 224, 236, 0.2);
 }
 .app__about .icon {
     font-size: 50px;
@@ -45,13 +48,47 @@
 }
 
 @media screen and (max-width:1150px) {
+    .about-flex{
+        padding-top: 40px;
+    }
     .app__about {
         flex-direction: column;
+        padding-top: 0;
+    }
+    .app__about-content-1{
+        img{
+            padding-left: 0;
+        }
     }
     .app__about-content-2 {
         margin: 2rem 0 0 0;
     }
     .app__about-content-3 {
         margin: 2rem 0 0 0;
+    }
+    .features-about{
+        padding-left: 1rem;
+    }
+}
+
+@media screen and (max-width:850px){
+    .about-flex{
+        flex-direction: column;
+        div{
+            width: 100%;
+        }
+    }
+    .india-post-div{
+        padding-right: 0;
+        align-items: center;
+        div{
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+        }
+        h1{
+margin-bottom: 0.5rem;
+            text-align: center;
+        }
     }
 }
